se agregan cambios para mostrar registro de caso de prueba mediante modal

--- a/src/main/webapp/pages/casos_prueba/templateCasoPrueba.xhtml
+++ b/src/main/webapp/pages/casos_prueba/templateCasoPrueba.xhtml
@@ -16,7 +16,7 @@
 
 						<h:outputLabel value="Id *" for="idCasoPrueba" />
 						<p:inputText id="idCasoPrueba"
-							value="#{proyectoBean.proyectoDTO.fechaCreacion}" required="true" />
+							value="prueba" required="true" />
 
 
 					</h:panelGrid>
@@ -28,11 +28,11 @@
 					<h:panelGrid columns="4" width="100%">
 						<h:outputLabel value="Nombre de campo" for="nombreCampo" />
 						<p:inputTextarea id="nombreCampo"
-							value="#{proyectoBean.proyectoDTO.fechaCreacion}" required="true" />
+							value="prueba" required="true" />
 
 						<h:outputLabel value="Tipo de dato" for="tipoDato" />
 						<p:inputTextarea id="tipoDato"
-							value="#{proyectoBean.proyectoDTO.fechaCreacion}" required="true" />
+							value="prueba" required="true" />
 
 						<h:commandButton value="Agregar campo">
 
@@ -59,11 +59,11 @@
 						<h:outputLabel value="Descripcion del caso de prueba"
 							for="descripcionCasoPrueba" />
 						<p:inputTextarea id="descripcionCasoPrueba"
-							value="#{proyectoBean.proyectoDTO.fechaCreacion}" required="true" />
+							value="prueba" required="true" />
 
 						<h:outputLabel value="Resultado esperado" for="resultadoEsperado" />
 						<p:inputTextarea id="resultadoEsperadoCasoPrueba"
-							value="#{proyectoBean.proyectoDTO.fechaCreacion}" required="true" />
+							value="prueba" required="true" />
 
 						<h:commandButton value="Agregar paso">
 
