se agregan avances en funcionalidad para ir agreando pasos a los casos de prueba

--- a/src/main/webapp/pages/registro/registro.xhtml
+++ b/src/main/webapp/pages/registro/registro.xhtml
@@ -20,8 +20,8 @@
             	<p:tab title="Proyecto">
             	<ui:include src="/pages/registro/templateProyecto.xhtml"></ui:include>
             	</p:tab>
-            	<p:tab title="Caso de Prueba">
-            	
+            	<p:tab title="Planificador de tareas">
+            	<ui:include src="/pages/planificador_tareas/planificador.xhtml"/>
             	</p:tab>
             	</p:tabView>
             	</p:panel>
