--- a/src/main/webapp/pages/registro/templateProyecto.xhtml
+++ b/src/main/webapp/pages/registro/templateProyecto.xhtml
@@ -55,7 +55,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="myModalLabel">Caso de Prueba</h4>
       </div>
       <div class="modal-body">
         <ui:include src="/pages/casos_prueba/templateCasoPrueba.xhtml"></ui:include>
