se corrigen mensajes

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,7 +11,7 @@
 	<ui:composition template="templates/layout.xhtml">
 		<ui:define name="content">
             <div id="bienvenida">
-                <h2>Bienvenido a mi aplicaci&oacute;n JSF</h2>
+                <h2>Bienvenido a Automatizaci&oacute;n de Pruebas</h2>
             </div>
 		</ui:define>
 	</ui:composition>
