--- a/src/main/webapp/pages/registro/templateProyecto.xhtml
+++ b/src/main/webapp/pages/registro/templateProyecto.xhtml
@@ -8,65 +8,93 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 <h:body>
-<script type="text/javascript" >
-    function showModal() {
-        $('#myModal').modal('show');
-    }
-</script>
+	<script type="text/javascript">
+		function showModal() {
+			$('#myModal').modal('show');
+		}
+	</script>
 	<h:panelGrid columns="4" width="100%">
 		<h:outputLabel value="Nombre Proyecto: *" for="nombre" />
 		<p:inputText id="nombre" value="#{proyectoBean.proyectoDTO.nombre}"
 			required="true" />
 
 		<h:outputLabel value="Fecha Creacion *" for="primerApellido" />
-		<p:inputText id="primerApellido"
-			value="prueba" required="true" />
+		<p:inputText id="primerApellido" value="prueba" required="true" />
 
 		<h:outputLabel value="Estimacion" for="estimacionProyecto" />
-		<p:inputText id="estimacionProyecto"
-			value="prueba" required="true" />
+		<p:inputText id="estimacionProyecto" value="prueba" required="true" />
 
 		<h:outputLabel value="Estrategia" for="estrategiaProyecto" />
-		<p:inputTextarea id="estrategiaProyecto"
-			value="prueba" required="true" />
+		<p:inputTextarea id="estrategiaProyecto" value="prueba"
+			required="true" />
+			
+			<h:outputLabel value="Lider de automatizaci&oacute;n *" for="lider" />
+						<p:selectOneMenu id="lider" value="" style="width:125px">
+							<f:selectItem itemLabel="Seleccionar" itemValue="" />
+							<f:selectItem itemLabel="Carlos Gomez" itemValue="1" />
+							<f:selectItem itemLabel="Javier Hernandez" itemValue="2" />
+							<f:selectItem itemLabel="Ramiro Fernandez" itemValue="3" />
+						</p:selectOneMenu>
 
 	</h:panelGrid>
 
 	<p:separator></p:separator>
 
 	<p:dataTable>
-		<p:column headerText="ID Caso">
+		<p:column headerText="Funcionalidad">
 			<h:outputText value="1" />
 		</p:column>
-		<p:column headerText="Nombre de caso">
+		<p:column headerText="N&uuml;mero de CP">
 			<h:outputText value="prueba" />
+		</p:column>
+		<p:column headerText="Ver">
+		<p:commandButton process="singleDT" update=":form:carDetail" icon="ui-icon-search" value="Ver"/>
 		</p:column>
 
 	</p:dataTable>
 	<p:separator />
-	
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Agregar caso de prueba
-</button>    
-    
-    <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Caso de Prueba</h4>
-      </div>
-      <div class="modal-body">
-        <ui:include src="/pages/casos_prueba/templateCasoPrueba.xhtml"></ui:include>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary">Guardar</button>
-      </div>
-    </div>
-  </div>
-</div>
+
+	<button type="button" class="btn btn-primary btn-lg"
+		data-toggle="modal" data-target="#myModal">Agregar caso de
+		prueba</button>
+
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+		aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title" id="myModalLabel">Caso de Prueba</h4>
+				</div>
+				<div class="modal-body">
+					<h:panelGrid columns="4" width="100%">
+						<h:outputLabel value="Nombre de la funcionalidad *"
+							for="nombreFuncionalidad" />
+						<p:inputText id="nombreFuncionalidad" value="tarea de prueba"
+							required="true" />
+
+						<h:outputLabel value="Complejidad *" for="complejidad" />
+						<p:selectOneMenu id="complejidad" value="" style="width:125px">
+							<f:selectItem itemLabel="Seleccionar" itemValue="" />
+							<f:selectItem itemLabel="Alta" itemValue="1" />
+							<f:selectItem itemLabel="Media" itemValue="2" />
+							<f:selectItem itemLabel="Baja" itemValue="3" />
+						</p:selectOneMenu>
+
+
+					</h:panelGrid>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+					<button type="button" class="btn btn-primary">Guardar</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </h:body>
 </html>
