--- a/src/main/webapp/pages/registro/templateProyecto.xhtml
+++ b/src/main/webapp/pages/registro/templateProyecto.xhtml
@@ -13,88 +13,103 @@
 			$('#myModal').modal('show');
 		}
 	</script>
+	<h:form id="formProyecto">
 	<h:panelGrid columns="4" width="100%">
+	
 		<h:outputLabel value="Nombre Proyecto: *" for="nombre" />
 		<p:inputText id="nombre" value="#{proyectoBean.proyectoDTO.nombre}"
-			required="true" />
+			required="true" disabled="#{proyectoBean.desabilitar}"/>
 
-		<h:outputLabel value="Fecha Creacion *" for="primerApellido" />
-		<p:inputText id="primerApellido" value="prueba" required="true" />
-
-		<h:outputLabel value="Estimacion" for="estimacionProyecto" />
-		<p:inputText id="estimacionProyecto" value="prueba" required="true" />
+		<h:outputLabel value="Fecha Creacion *" for="fechaCreacionProyecto" />		
+		<p:calendar id="fechaCreacionProyecto" 
+		            readonlyInput="true"
+			        label="Fecha Nacimiento" 
+			        required="true" 
+			        navigator="true"
+			        pattern="dd/MM/yyyy" 
+			        yearRange="1900:c"
+			        value="#{proyectoBean.proyectoDTO.fechaCreacion}" />
+		<p:message for="fechaCreacionProyecto" />
 
 		<h:outputLabel value="Estrategia" for="estrategiaProyecto" />
-		<p:inputTextarea id="estrategiaProyecto" value="prueba"
+		<p:inputTextarea id="estrategiaProyecto" value="#{proyectoBean.proyectoDTO.estrategia}"
 			required="true" />
-			
-			<h:outputLabel value="Lider de automatizaci&oacute;n *" for="lider" />
-						<p:selectOneMenu id="lider" value="" style="width:125px">
-							<f:selectItem itemLabel="Seleccionar" itemValue="" />
-							<f:selectItem itemLabel="Carlos Gomez" itemValue="1" />
-							<f:selectItem itemLabel="Javier Hernandez" itemValue="2" />
-							<f:selectItem itemLabel="Ramiro Fernandez" itemValue="3" />
-						</p:selectOneMenu>
+
+		<h:outputLabel value="Lider de automatizaci&oacute;n *" for="lider" />
+		<p:selectOneMenu id="lider" disabled="disabled" value="1" style="width:125px">
+			<f:selectItem itemLabel="Seleccionar" itemValue="" />
+			<f:selectItem itemLabel="Carlos Gomez" itemValue="1" />
+			<f:selectItem itemLabel="Javier Hernandez" itemValue="2" />
+			<f:selectItem itemLabel="Ramiro Fernandez" itemValue="3" />
+		</p:selectOneMenu>
+
 
 	</h:panelGrid>
 
-	<p:separator></p:separator>
+	<p:commandButton value="Guardar" id="botonGuardar" actionListener="#{proyectoBean.guardarProyecto}" ajax="false"/>
 
-	<p:dataTable>
-		<p:column headerText="Funcionalidad">
-			<h:outputText value="1" />
-		</p:column>
-		<p:column headerText="N&uuml;mero de CP">
-			<h:outputText value="prueba" />
-		</p:column>
-		<p:column headerText="Ver">
-		<p:commandButton process="singleDT" update=":form:carDetail" icon="ui-icon-search" value="Ver"/>
-		</p:column>
+</h:form>
+	<j:if test="#{proyecto.id != null}">
+		<p:separator></p:separator>
 
-	</p:dataTable>
-	<p:separator />
+		<h5>Funcionalidad</h5>
 
-	<button type="button" class="btn btn-primary btn-lg"
-		data-toggle="modal" data-target="#myModal">Agregar caso de
-		prueba</button>
+		<button type="button" class="btn btn-primary btn-lg"
+			data-toggle="modal" data-target="#myModal">Agregar
+			funcionalidad</button>
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-		aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-					<h4 class="modal-title" id="myModalLabel">Caso de Prueba</h4>
-				</div>
-				<div class="modal-body">
-					<h:panelGrid columns="4" width="100%">
-						<h:outputLabel value="Nombre de la funcionalidad *"
-							for="nombreFuncionalidad" />
-						<p:inputText id="nombreFuncionalidad" value="tarea de prueba"
-							required="true" />
+		<p:dataTable>
+			<p:column headerText="Funcionalidad">
+				<h:outputText value="1" />
+			</p:column>
+			<p:column headerText="N&uuml;mero de CP">
+				<h:outputText value="prueba" />
+			</p:column>
+			<p:column headerText="Ver">
+				<p:commandButton process="singleDT" update=":form:carDetail"
+					icon="ui-icon-search" value="Ver" />
+			</p:column>
 
-						<h:outputLabel value="Complejidad *" for="complejidad" />
-						<p:selectOneMenu id="complejidad" value="" style="width:125px">
-							<f:selectItem itemLabel="Seleccionar" itemValue="" />
-							<f:selectItem itemLabel="Alta" itemValue="1" />
-							<f:selectItem itemLabel="Media" itemValue="2" />
-							<f:selectItem itemLabel="Baja" itemValue="3" />
-						</p:selectOneMenu>
+		</p:dataTable>
+		<p:separator />
+
+		<!-- Modal -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+			aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Caso de Prueba</h4>
+					</div>
+					<div class="modal-body">
+						<h:panelGrid columns="4" width="100%">
+							<h:outputLabel value="Nombre de la funcionalidad *"
+								for="nombreFuncionalidad" />
+							<p:inputText id="nombreFuncionalidad" value="tarea de prueba"
+								required="true" />
+
+							<h:outputLabel value="Complejidad *" for="complejidad" />
+							<p:selectOneMenu id="complejidad" value="" style="width:125px">
+								<f:selectItem itemLabel="Seleccionar" itemValue="" />
+								<f:selectItem itemLabel="Alta" itemValue="1" />
+								<f:selectItem itemLabel="Media" itemValue="2" />
+								<f:selectItem itemLabel="Baja" itemValue="3" />
+							</p:selectOneMenu>
 
 
-					</h:panelGrid>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-					<button type="button" class="btn btn-primary">Guardar</button>
+						</h:panelGrid>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+						<button type="button" class="btn btn-primary">Guardar</button>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-
+	</j:if>
 </h:body>
 </html>
