se agrega primera versión de guardado de proyecto

--- a/src/main/webapp/pages/registro/templateProyecto.xhtml
+++ b/src/main/webapp/pages/registro/templateProyecto.xhtml
@@ -18,7 +18,7 @@
 	
 		<h:outputLabel value="Nombre Proyecto: *" for="nombre" />
 		<p:inputText id="nombre" value="#{proyectoBean.proyectoDTO.nombre}"
-			required="true" disabled="#{proyectoBean.desabilitar}"/>
+			required="true"/>
 
 		<h:outputLabel value="Fecha Creacion *" for="fechaCreacionProyecto" />		
 		<p:calendar id="fechaCreacionProyecto" 
