--- a/src/main/webapp/pages/registro/templateProyecto.xhtml
+++ b/src/main/webapp/pages/registro/templateProyecto.xhtml
@@ -16,6 +16,8 @@
 	<h:form id="formProyecto">
 	<h:panelGrid columns="4" width="100%">
 	
+	<h:inputHidden id="id" value="#{proyectoBean.proyectoDTO.id}"/>
+	
 		<h:outputLabel value="Nombre Proyecto: *" for="nombre" />
 		<p:inputText id="nombre" value="#{proyectoBean.proyectoDTO.nombre}"
 			required="true"/>
@@ -44,7 +46,7 @@
 
 
 	</h:panelGrid>
-
+	
 	<p:commandButton value="Guardar" id="botonGuardar" actionListener="#{proyectoBean.guardarProyecto}" ajax="false"/>
 
 </h:form>
