--- a/src/main/webapp/pages/registro/detalle_proyecto.xhtml
+++ b/src/main/webapp/pages/registro/detalle_proyecto.xhtml
@@ -13,103 +13,96 @@
 	<ui:composition template="/templates/layout.xhtml">
 		<ui:define name="content">
 			<h2>Proyecto:</h2>
+			<p:messages autoUpdate="true" closable="true" showDetail="false" />
+			<h:panelGrid columns="2" width="100%">
+
+				<h:inputHidden id="id" value="#{proyectoBean.proyectoDTO.id}" />
+
+				<h:outputLabel value="Nombre Proyecto:" for="nombre" />
+				<h:outputLabel id="nombre"
+					value="#{proyectoBean.proyectoDTO.nombre}" />
+
+				<h:outputLabel value="Fecha Creacion:" for="fechaCreacionProyecto" />
+				<p:calendar id="fechaCreacionProyecto" readonlyInput="true"
+					label="Fecha Nacimiento" required="true" navigator="true"
+					pattern="dd/MM/yyyy" yearRange="1900:c"
+					value="#{proyectoBean.proyectoDTO.fechaCreacion}" />
+				<p:message for="fechaCreacionProyecto" />
+
+				<h:outputLabel value="Estrategia:" for="estrategiaProyecto" />
+				<p:inputTextarea id="estrategiaProyecto"
+					value="#{proyectoBean.proyectoDTO.estrategia}" required="true"
+					disabled="disabled" />
+
+				<h:outputLabel value="Lider de automatizaci&oacute;n *" for="lider" />
+				<p:selectOneMenu id="lider" disabled="disabled" value="1"
+					style="width:125px">
+					<f:selectItem itemLabel="Seleccionar" itemValue="" />
+					<f:selectItem itemLabel="Carlos Gomez" itemValue="1" />
+					<f:selectItem itemLabel="Javier Hernandez" itemValue="2" />
+					<f:selectItem itemLabel="Ramiro Fernandez" itemValue="3" />
+				</p:selectOneMenu>
+
+
+			</h:panelGrid>
+
+			<h:link value="Editar" outcome="/pages/registro/registro.xhtml">
+				<f:param name="id" value="#{proyectoBean.proyectoDTO.id}" />
+			</h:link>
+			<p:separator></p:separator>
+
+			<h5>Funcionalidad</h5>
+
+			<p:commandButton value="Agregar funcionalidad" type="button" onclick="PF('funcionalidadDlg').show();" />
+
+			<p:panel id="panelListaFuncionalidades">
+				<p:dataTable id="tableFuncionalidades" value="#{proyectoBean.funcionalidadesDTO}" var="funcionalidad">
+					<p:column headerText="Funcionalidad">
+						<h:outputText value="#{funcionalidad.nombreFuncionalidad}" />
+					</p:column>
+					<p:column headerText="N&uuml;mero de CP">
+						<h:outputText value="prueba" />
+					</p:column>
+					<p:column headerText="Ver">
+						<p:commandButton 
+							icon="ui-icon-search" value="Ver" />
+					</p:column>
+
+				</p:dataTable>
+			</p:panel>	
+			<p:separator />
 			<h:form>
-				<p:messages autoUpdate="true" closable="true" showDetail="false" />
-				<h:panelGrid columns="2" width="100%">
+			 <p:dialog id="dialogFuncionalidad" header="Funcionalidad" widgetVar="funcionalidadDlg" modal="true" styleClass="dialog dialog2"
+                draggable="false" resizable="false" showEffect="fade"
+                hideEffect="fade">
+            <h:panelGrid columns="4" width="100%">
+									<h:outputLabel value="Nombre de la funcionalidad *"
+										for="nombreFuncionalidad" />
+									<p:inputText id="nombreFuncionalidad" value="#{proyectoBean.funcionalidadDTO.nombreFuncionalidad}"
+										required="true" />
 
-					<h:outputLabel value="Nombre Proyecto:" for="nombre" />
-					<h:outputLabel id="nombre" value="#{proyectoBean.proyectoDTO.nombre}"/>	
+									<h:outputLabel value="Complejidad *" for="complejidadSelect" />
+									<p:selectOneMenu id="complejidadSelect" 
+									                 value="#{proyectoBean.funcionalidadDTO.complejidad}" 
+									                 style="width:125px"
+										             converter="#{complejidadConverter}">
+										<f:selectItem/>
+										<f:selectItems
+											value="#{proyectoBean.listaCatalogoComplejidad}"
+											var="complejidad"
+											itemLabel="#{complejidad.descripcionComplejidad}"
+											itemValue="#{complejidad}" />
+									</p:selectOneMenu>
+								</h:panelGrid>
+							<button type="button" class="btn btn-default"
+								data-dismiss="modal">Cancelar</button>
 
-					<h:outputLabel value="Fecha Creacion:" for="fechaCreacionProyecto" />
-					<p:calendar id="fechaCreacionProyecto" readonlyInput="true"
-						label="Fecha Nacimiento" required="true" navigator="true"
-						pattern="dd/MM/yyyy" yearRange="1900:c"
-						value="#{proyectoBean.proyectoDTO.fechaCreacion}" />
-					<p:message for="fechaCreacionProyecto" />
-
-					<h:outputLabel value="Estrategia:" for="estrategiaProyecto" />
-					<p:inputTextarea id="estrategiaProyecto"
-						value="#{proyectoBean.proyectoDTO.estrategia}" required="true" disabled="disabled"/>
-
-					<h:outputLabel value="Lider de automatizaci&oacute;n *" for="lider" />
-					<p:selectOneMenu id="lider" disabled="disabled" value="1"
-						style="width:125px">
-						<f:selectItem itemLabel="Seleccionar" itemValue="" />
-						<f:selectItem itemLabel="Carlos Gomez" itemValue="1" />
-						<f:selectItem itemLabel="Javier Hernandez" itemValue="2" />
-						<f:selectItem itemLabel="Ramiro Fernandez" itemValue="3" />
-					</p:selectOneMenu>
-
-
-				</h:panelGrid>
-				
-				<h:link value="Editar"
-						outcome="/pages/registro/registro.xhtml">
-						<f:param name="id" value="#{proyecto.id}" />
-					</h:link>
-
-					<p:separator></p:separator>
-
-					<h5>Funcionalidad</h5>
-
-					<button type="button" class="btn btn-primary btn-lg"
-						data-toggle="modal" data-target="#myModal">Agregar
-						funcionalidad</button>
-
-					<p:dataTable>
-						<p:column headerText="Funcionalidad">
-							<h:outputText value="1" />
-						</p:column>
-						<p:column headerText="N&uuml;mero de CP">
-							<h:outputText value="prueba" />
-						</p:column>
-						<p:column headerText="Ver">
-							<p:commandButton process="singleDT" update=":form:carDetail"
-								icon="ui-icon-search" value="Ver" />
-						</p:column>
-
-					</p:dataTable>
-					<p:separator />
-
-					<!-- Modal -->
-					<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-						aria-labelledby="myModalLabel">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal"
-										aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-									<h4 class="modal-title" id="myModalLabel">Caso de Prueba</h4>
-								</div>
-								<div class="modal-body">
-									<h:panelGrid columns="4" width="100%">
-										<h:outputLabel value="Nombre de la funcionalidad *"
-											for="nombreFuncionalidad" />
-										<p:inputText id="nombreFuncionalidad" value="tarea de prueba"
-											required="true" />
-
-										<h:outputLabel value="Complejidad *" for="complejidad" />
-										<p:selectOneMenu id="complejidad" value="" style="width:125px">
-											<f:selectItem itemLabel="Seleccionar" itemValue="" />
-											<f:selectItem itemLabel="Alta" itemValue="1" />
-											<f:selectItem itemLabel="Media" itemValue="2" />
-											<f:selectItem itemLabel="Baja" itemValue="3" />
-										</p:selectOneMenu>
-
-
-									</h:panelGrid>
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-default"
-										data-dismiss="modal">Cancelar</button>
-									<button type="button" class="btn btn-primary">Guardar</button>
-								</div>
-							</div>
-						</div>
-					</div>
-
+							<p:commandButton value="Agregar"
+								update="dialogFuncionalidad,:panelListaFuncionalidades"
+								oncomplete="PF('funcionalidadDlg').hide();"
+								actionListener="#{proyectoBean.generarListaFuncionalidades}"
+								icon="ui-icon-check" styleClass="btn btn-primary"/>
+        </p:dialog>
 			</h:form>
 		</ui:define>
 	</ui:composition>
