se agregan algunos estilos

--- a/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
+++ b/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
@@ -84,7 +84,7 @@
             </div>-->
 
             <p:panel id="panelCasosPrueba">
-            <p:dataTable id="tableCasosPrueba" value="#{funcionalidadBean.casosPruebaDTO}" var="casoPrueba">
+            <p:dataTable styleClass="table" id="tableCasosPrueba" value="#{funcionalidadBean.casosPruebaDTO}" var="casoPrueba">
                 <p:column headerText="ID Caso">
                     <h:outputText value="#{casoPrueba.identificador}"/>
                 </p:column>
