--- a/src/main/webapp/pages/registro/detalle_proyecto.xhtml
+++ b/src/main/webapp/pages/registro/detalle_proyecto.xhtml
@@ -88,7 +88,7 @@
             </p:dialog>
             <h:form>
                 <p:panel id="panelListaFuncionalidades">
-                    <p:dataTable id="tableFuncionalidades"
+                    <p:dataTable styleClass="table" id="tableFuncionalidades"
                                  value="#{proyectoBean.funcionalidadesDTO}"
                                  var="funcionalidad">
                         <p:column headerText="Funcionalidad">
