--- a/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
+++ b/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
@@ -4,10 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:j="http://java.sun.com/jsp/jstl/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:p="http://primefaces.org/ui">
 <h:body>
     <ui:composition template="/templates/layout.xhtml">
         <ui:define name="content">
@@ -29,6 +27,37 @@
             <h5>Casos de Prueba</h5>
 
             <p:commandButton value="Agregar caso de prueba" type="button" onclick="PF('dialogCasoPrueba').show();" />
+
+            <p:commandButton id="btnGuardarCaso" value="Guardar funcionalidades"
+                             type="button"
+                             onclick="PF('dialogConfirmacionCasos').show();"/>
+
+            <p:dialog id="dialogConfirmacionCasos" header="Guardar Casos de Prueba"
+                      widgetVar="dialogConfirmacionCasos" modal="true"
+                      styleClass="dialog dialog2"
+                      draggable="false" resizable="false" showEffect="fade"
+                      hideEffect="fade">
+                <h:form>
+                    <h:panelGrid columns="4" width="100%">
+                        <h:outputLabel
+                                value="¿Est&aacute; seguro de guardar los casos de prueba?"/>
+                        <h:inputHidden id="id"
+                                       value="#{funcionalidadBean.funcionalidadDTO.id}"/>
+                    </h:panelGrid>
+                    <button type="button" class="btn btn-default"
+                            onclick="PF('dialogConfirmacionCasos').hide();">
+                        Cancelar
+                    </button>
+
+                    <p:commandButton value="Aceptar"
+                                     oncomplete="PF('dialogConfirmacionCasos').hide();"
+                                     actionListener="#{funcionalidadBean.guardarCasosPrueba}"
+                                     icon="ui-icon-check"
+                                     styleClass="btn btn-primary"/>
+
+                </h:form>
+            </p:dialog>
+
 
 
             <p:dialog id="dialogCasoPrueba" header="Agregar Caso de Prueba"
