--- a/src/main/webapp/pages/seguridad/template_form_usuario.xhtml
+++ b/src/main/webapp/pages/seguridad/template_form_usuario.xhtml
@@ -39,11 +39,11 @@
             <p:message for="fechaNacimiento" />
 
             <h:outputLabel value="Usuario: *" for="username" />
-            <p:inputTextarea id="username" value="#{usuarioBean.usuarioDTO.username}"
+            <p:inputText id="username" value="#{usuarioBean.usuarioDTO.username}"
                              required="true" />
 
             <h:outputLabel value="Contrase&ntilde;a" for="contrasena" />
-            <p:inputTextarea id="contrasena" value="#{usuarioBean.usuarioDTO.contrasena}"
+            <p:inputText id="contrasena" value="#{usuarioBean.usuarioDTO.contrasena}"
                              required="true" />
 
 
