se agrega implementacion de Serializable en todas las clases, se agrega primer avance para agregar un usuario a un proyecto

--- a/src/main/webapp/pages/casos_prueba/templateCasoPrueba.xhtml
+++ b/src/main/webapp/pages/casos_prueba/templateCasoPrueba.xhtml
@@ -3,9 +3,6 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:j="http://java.sun.com/jsp/jstl/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:pe="http://primefaces.org/ui/extensions">
 <h:body>
@@ -61,7 +58,7 @@
 						<p:inputTextarea id="descripcionCasoPrueba"
 							value="prueba" required="true" />
 
-						<h:outputLabel value="Resultado esperado" for="resultadoEsperado" />
+						<h:outputLabel value="Resultado esperado" for="prueba" />
 						<p:inputTextarea id="resultadoEsperadoCasoPrueba"
 							value="prueba" required="true" />
 
