--- a/src/main/webapp/pages/seguridad/detalle_usuario.xhtml
+++ b/src/main/webapp/pages/seguridad/detalle_usuario.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <h:body>
 
@@ -43,7 +44,6 @@
                                 disabled="true"
                                 yearRange="1900:c"
                                 value="#{usuarioBean.usuarioDTO.fechaNacimiento}" />
-                    <p:message for="fechaNacimiento" />
 
                     <h:outputLabel value="Usuario: *" for="username" />
                     <p:inputText id="username" value="#{usuarioBean.usuarioDTO.username}"
@@ -52,6 +52,14 @@
                     <h:outputLabel value="Estatus: *" for="estatus" />
                     <p:inputText id="estatus" value="#{usuarioBean.usuarioDTO.habilitado}"
                                  disabled="true" />
+
+                    <h:outputLabel value="Rol: *" />
+                    <c:if test="#{usuariosBean.usuarioRespuestaDTO.usuarioDTO.rol eq 'ROLE_LIDER'}">
+                        <h:outputLabel value="L&iacute;der Automatizador"/>
+                    </c:if>
+                    <c:if test="#{usuariosBean.usuarioRespuestaDTO.usuarioDTO.rol eq 'ROLE_CORE'}">
+                        <h:outputLabel value="Core"/>
+                    </c:if>
 
 
                 </h:panelGrid>
