se corrige error para agregar complejidad en funcionalidad en sesion, falta para persistir, se quitan getters y setters para optimizar codigo y se agrega anotacion de Data para que se generen al compilar

--- a/src/main/webapp/pages/registro/detalle_proyecto.xhtml
+++ b/src/main/webapp/pages/registro/detalle_proyecto.xhtml
@@ -44,6 +44,20 @@
                     <f:selectItem itemLabel="Ramiro Fernandez" itemValue="3"/>
                 </p:selectOneMenu>
 
+                <h:outputLabel value="Complejidad *"
+                               for="complejidadSelectt"/>
+                <p:selectOneMenu id="complejidadSelectt"
+                                 value="#{proyectoBean.funcionalidadDTO.complejidad}"
+                                 style="width:125px"
+                                 converter="#{complejidadConverter}">
+                    <f:selectItem/>
+                    <f:selectItems
+                            value="#{proyectoBean.listaCatalogoComplejidad}"
+                            var="complejidad"
+                            itemLabel="#{complejidad.descripcionComplejidad}"
+                            itemValue="#{complejidad}"/>
+                </p:selectOneMenu>
+
 
             </h:panelGrid>
 
