se suben avances para guardar cambios de un proyecti incluyendo funcionalidades

--- a/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
+++ b/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
@@ -20,6 +20,11 @@
                 <p:inputText id="nombreFuncionalidad" value="#{funcionalidadBean.funcionalidadDTO.nombreFuncionalidad}"
                              disabled="disabled"/>
 
+                <h:outputLabel value="Complejidad *"
+                               for="complejidad"/>
+                <p:inputText id="complejidad" value="#{funcionalidadBean.funcionalidadDTO.complejidad.nombreComplejidad}"
+                             disabled="disabled"/>
+
             </h:panelGrid>
 
             <p:separator></p:separator>
