se corrige error al momento de guardar casos de prueba en el que no se relacionada con su funcionalidad correspondiente, se agrega tambien mensaje de error al guardar caso de prueba que supera el tiempo de estimacion de la complejidad configurada

--- a/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
+++ b/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
@@ -96,6 +96,7 @@
                     <p:commandButton value="Agregar"
                                      update=":panelCasosPrueba"
                                      oncomplete="PF('dialogCasoPrueba').hide();"
+                                     onerror="alert('El tiempo de estimacion no puede superar los '#{funcionalidadBean.funcionalidadDTO.complejidad.limiteTiempoMiutos}' minutos)"
                                      action="#{funcionalidadBean.generarListaCasosPrueba}"
                                      icon="ui-icon-check"
                                      styleClass="btn btn-primary"/>
